hugr-core/src/hugr/views/snapshots/hugr_core__hugr__views__tests__dot_cfg.snap
---
source: hugr-core/src/hugr/views/tests.rs
expression: dot
---
digraph {
0 [shape=plain label=<<table border="1"><tr><td align="text" border="0" colspan="1">(0) Module</td></tr></table>>]
1 [shape=plain label=<<table border="1"><tr><td align="text" border="0" colspan="1">(1) FuncDefn: "main"</td></tr><tr><td port="out0" align="text" colspan="1" cellpadding="1" >0: [usize] -&gt; [usize]</td></tr></table>>]
2 [shape=plain label=<<table border="1"><tr><td align="text" border="0" colspan="1">(2) Input</td></tr><tr><td port="out0" align="text" colspan="1" cellpadding="1" >0: usize</td></tr></table>>]
2:out0 -> 4:in0 [style=""]
3 [shape=plain label=<<table border="1"><tr><td port="in0" align="text" colspan="1" cellpadding="1" >0: usize</td></tr><tr><td align="text" border="0" colspan="1">(3) Output</td></tr></table>>]
4 [shape=plain color="#832561" penwidth="3px" label=<<table border="1"><tr><td port="in0" align="text" colspan="1" cellpadding="1" >0: usize</td></tr><tr><td align="text" border="0" colspan="1">(4) [**CFG**]</td></tr><tr><td port="out0" align="text" colspan="1" cellpadding="1" >0: usize</td></tr></table>>]
4:out0 -> 3:in0 [style=""]
5 [shape=plain label=<<table border="1"><tr><td port="in0" align="text" colspan="1" cellpadding="1" border="0">0</td></tr><tr><td align="text" border="0" colspan="1">(5) ExitBlock</td></tr></table>>]
6 [shape=plain label=<<table border="1"><tr><td port="in0" align="text" colspan="2" cellpadding="1" border="0">0</td></tr><tr><td align="text" border="0" colspan="2">(6) DataflowBlock</td></tr><tr><td port="out0" align="text" colspan="1" cellpadding="1" border="0">0</td><td port="out1" align="text" colspan="1" cellpadding="1" border="0">1</td></tr></table>>]
6:out0 -> 10:in0 [style="dashed"]
6:out1 -> 5:in0 [style="dashed"]
7 [shape=plain label=<<table border="1"><tr><td align="text" border="0" colspan="1">(7) Input</td></tr><tr><td port="out0" align="text" colspan="1" cellpadding="1" >0: usize</td></tr></table>>]
7:out0 -> 9:in0 [style=""]
8 [shape=plain label=<<table border="1"><tr><td port="in0" align="text" colspan="1" cellpadding="1" >0: [usize]+[usize]</td></tr><tr><td align="text" border="0" colspan="1">(8) Output</td></tr></table>>]
9 [shape=plain label=<<table border="1"><tr><td port="in0" align="text" colspan="1" cellpadding="1" >0: usize</td></tr><tr><td align="text" border="0" colspan="1">(9) Tag(Right)</td></tr><tr><td port="out0" align="text" colspan="1" cellpadding="1" >0: [usize]+[usize]</td></tr></table>>]
9:out0 -> 8:in0 [style=""]
10 [shape=plain label=<<table border="1"><tr><td port="in0" align="text" colspan="1" cellpadding="1" border="0">0</td></tr><tr><td align="text" border="0" colspan="1">(10) DataflowBlock</td></tr><tr><td port="out0" align="text" colspan="1" cellpadding="1" border="0">0</td></tr></table>>]
10:out0 -> 5:in0 [style="dashed"]
11 [shape=plain label=<<table border="1"><tr><td align="text" border="0" colspan="1">(11) Input</td></tr><tr><td port="out0" align="text" colspan="1" cellpadding="1" >0: usize</td></tr></table>>]
11:out0 -> 12:in1 [style=""]
12 [shape=plain label=<<table border="1"><tr><td port="in0" align="text" colspan="1" cellpadding="1" >0: Unit</td><td port="in1" align="text" colspan="1" cellpadding="1" >1: usize</td></tr><tr><td align="text" border="0" colspan="2">(12) Output</td></tr></table>>]
13 [shape=plain label=<<table border="1"><tr><td align="text" border="0" colspan="1">(13) Unit</td></tr><tr><td port="out0" align="text" colspan="1" cellpadding="1" >0: Unit</td></tr></table>>]
13:out0 -> 14:in0 [style=""]
14 [shape=plain label=<<table border="1"><tr><td port="in0" align="text" colspan="1" cellpadding="1" >0: Unit</td></tr><tr><td align="text" border="0" colspan="1">(14) LoadConstant</td></tr><tr><td port="out0" align="text" colspan="1" cellpadding="1" >0: Unit</td></tr></table>>]
14:out0 -> 12:in0 [style=""]
hier0 [shape=plain label="0"]
hier0 -> hier1  [style = "dashed"] 
hier1 [shape=plain label="1"]
hier1 -> hier2  [style = "dashed"] 
hier1 -> hier3  [style = "dashed"] 
hier1 -> hier4  [style = "dashed"] 
hier2 [shape=plain label="2"]
hier3 [shape=plain label="3"]
hier4 [shape=plain label="4"]
hier4 -> hier6  [style = "dashed"] 
hier4 -> hier5  [style = "dashed"] 
hier4 -> hier10  [style = "dashed"] 
hier5 [shape=plain label="5"]
hier6 [shape=plain label="6"]
hier6 -> hier7  [style = "dashed"] 
hier6 -> hier8  [style = "dashed"] 
hier6 -> hier9  [style = "dashed"] 
hier7 [shape=plain label="7"]
hier8 [shape=plain label="8"]
hier9 [shape=plain label="9"]
hier10 [shape=plain label="10"]
hier10 -> hier11  [style = "dashed"] 
hier10 -> hier12  [style = "dashed"] 
hier10 -> hier13  [style = "dashed"] 
hier10 -> hier14  [style = "dashed"] 
hier11 [shape=plain label="11"]
hier12 [shape=plain label="12"]
hier13 [shape=plain label="13"]
hier14 [shape=plain label="14"]
}
