hugr-core/src/hugr/views/snapshots/hugr_core__hugr__views__tests__dot_dfg.snap
---
source: hugr-core/src/hugr/views/tests.rs
expression: dot
---
digraph {
0 [shape=plain label=<<table border="1"><tr><td align="text" border="0" colspan="1">(0) Module</td></tr></table>>]
1 [shape=plain label=<<table border="1"><tr><td align="text" border="0" colspan="1">(1) FuncDefn: "main"</td></tr><tr><td port="out0" align="text" colspan="1" cellpadding="1" >0: [qubit, qubit] -&gt; [qubit, qubit]</td></tr></table>>]
2 [shape=plain label=<<table border="1"><tr><td align="text" border="0" colspan="2">(2) Input</td></tr><tr><td port="out0" align="text" colspan="1" cellpadding="1" >0: qubit</td><td port="out1" align="text" colspan="1" cellpadding="1" >1: qubit</td></tr></table>>]
2:out0 -> 4:in0 [style=""]
2:out1 -> 4:in1 [style=""]
3 [shape=plain label=<<table border="1"><tr><td port="in0" align="text" colspan="1" cellpadding="1" >0: qubit</td><td port="in1" align="text" colspan="1" cellpadding="1" >1: qubit</td></tr><tr><td align="text" border="0" colspan="2">(3) Output</td></tr></table>>]
4 [shape=plain color="#832561" penwidth="3px" label=<<table border="1"><tr><td port="in0" align="text" colspan="2" cellpadding="1" >0: qubit</td><td port="in1" align="text" colspan="2" cellpadding="1" >1: qubit</td></tr><tr><td align="text" border="0" colspan="4">(4) [**DFG**]</td></tr><tr><td port="out0" align="text" colspan="2" cellpadding="1" >0: qubit</td><td port="out1" align="text" colspan="2" cellpadding="1" >1: qubit</td></tr></table>>]
4:out0 -> 3:in0 [style=""]
4:out1 -> 3:in1 [style=""]
5 [shape=plain label=<<table border="1"><tr><td align="text" border="0" colspan="2">(5) Input</td></tr><tr><td port="out0" align="text" colspan="1" cellpadding="1" >0: qubit</td><td port="out1" align="text" colspan="1" cellpadding="1" >1: qubit</td></tr></table>>]
5:out0 -> 7:in0 [style=""]
5:out1 -> 7:in1 [style=""]
6 [shape=plain label=<<table border="1"><tr><td port="in0" align="text" colspan="1" cellpadding="1" >0: qubit</td><td port="in1" align="text" colspan="1" cellpadding="1" >1: qubit</td></tr><tr><td align="text" border="0" colspan="2">(6) Output</td></tr></table>>]
7 [shape=plain label=<<table border="1"><tr><td port="in0" align="text" colspan="3" cellpadding="1" >0: qubit</td><td port="in1" align="text" colspan="3" cellpadding="1" >1: qubit</td></tr><tr><td align="text" border="0" colspan="6">(7) test.quantum.CX</td></tr><tr><td port="out0" align="text" colspan="2" cellpadding="1" >0: qubit</td><td port="out1" align="text" colspan="2" cellpadding="1" >1: qubit</td><td port="out2" align="text" colspan="2" cellpadding="1" border="0"></td></tr></table>>]
7:out0 -> 8:in1 [style=""]
7:out1 -> 8:in0 [style=""]
7:out2 -> 8:in2 [style="dotted"]
8 [shape=plain label=<<table border="1"><tr><td port="in0" align="text" colspan="2" cellpadding="1" >0: qubit</td><td port="in1" align="text" colspan="2" cellpadding="1" >1: qubit</td><td port="in2" align="text" colspan="2" cellpadding="1" border="0"></td></tr><tr><td align="text" border="0" colspan="6">(8) test.quantum.CX</td></tr><tr><td port="out0" align="text" colspan="3" cellpadding="1" >0: qubit</td><td port="out1" align="text" colspan="3" cellpadding="1" >1: qubit</td></tr></table>>]
8:out0 -> 6:in0 [style=""]
8:out1 -> 6:in1 [style=""]
hier0 [shape=plain label="0"]
hier0 -> hier1  [style = "dashed"] 
hier1 [shape=plain label="1"]
hier1 -> hier2  [style = "dashed"] 
hier1 -> hier3  [style = "dashed"] 
hier1 -> hier4  [style = "dashed"] 
hier2 [shape=plain label="2"]
hier3 [shape=plain label="3"]
hier4 [shape=plain label="4"]
hier4 -> hier5  [style = "dashed"] 
hier4 -> hier6  [style = "dashed"] 
hier4 -> hier7  [style = "dashed"] 
hier4 -> hier8  [style = "dashed"] 
hier5 [shape=plain label="5"]
hier6 [shape=plain label="6"]
hier7 [shape=plain label="7"]
hier8 [shape=plain label="8"]
}
