hugr-core/src/hugr/views/snapshots/hugr_core__hugr__views__tests__mmd_dfg.snap
---
source: hugr-core/src/hugr/views/tests.rs
expression: h.mermaid_string()
---
---
config:
    layout: elk
---
graph LR
    subgraph 0 ["(0) Module"]
        direction LR
        subgraph 1 ["(1) FuncDefn: #quot;main#quot;"]
            direction LR
            2["(2) Input"]
            3["(3) Output"]
            subgraph 4 ["(4) [**DFG**]"]
                direction LR
                style 4 stroke:#832561,stroke-width:3px
                5["(5) Input"]
                6["(6) Output"]
                7["(7) test.quantum.CX"]
                8["(8) test.quantum.CX"]
                5--"0:0<br>prelude.qubit"-->7
                5--"1:1<br>prelude.qubit"-->7
                7--"0:1<br>prelude.qubit"-->8
                7--"1:0<br>prelude.qubit"-->8
                7-."2:2".->8
                8--"0:0<br>prelude.qubit"-->6
                8--"1:1<br>prelude.qubit"-->6
            end
            2--"0:0<br>prelude.qubit"-->4
            2--"1:1<br>prelude.qubit"-->4
            4--"0:0<br>prelude.qubit"-->3
            4--"1:1<br>prelude.qubit"-->3
        end
    end
