hugr-core/src/hugr/views/snapshots/hugr_core__hugr__views__tests__mmd_empty_dfg.snap
---
source: hugr-core/src/hugr/views/tests.rs
expression: h.mermaid_string()
---
---
config:
    layout: elk
---
graph LR
    subgraph 0 ["(0) Module"]
        direction LR
        subgraph 1 ["(1) FuncDefn: #quot;main#quot;"]
            direction LR
            2["(2) Input"]
            3["(3) Output"]
            subgraph 4 ["(4) [**DFG**]"]
                direction LR
                style 4 stroke:#832561,stroke-width:3px
                5["(5) Input"]
                6["(6) Output"]
                5--"0:0<br>Bool"-->6
            end
            2--"0:0<br>Bool"-->4
            4--"0:0<br>Bool"-->3
        end
    end
