hugr-core/src/hugr/views/snapshots/hugr_core__hugr__views__tests__mmd_func.snap
---
source: hugr-core/src/hugr/views/tests.rs
expression: h.mermaid_string()
---
---
config:
    layout: elk
---
graph LR
    subgraph 0 ["(0) Module"]
        direction LR
        subgraph 1 ["(1) [**FuncDefn: #quot;test#quot;**]"]
            direction LR
            style 1 stroke:#832561,stroke-width:3px
            2["(2) Input"]
            3["(3) Output"]
            2--"0:0<br>Bool"-->3
        end
    end
