hugr-core/src/hugr/views/snapshots/hugr_core__hugr__views__tests__mmd_module.snap
---
source: hugr-core/src/hugr/views/tests.rs
expression: h.mermaid_string()
---
---
config:
    layout: elk
---
graph LR
    subgraph 0 ["(0) [**Module**]"]
        direction LR
        style 0 stroke:#832561,stroke-width:3px
        1["(1) FuncDecl: #quot;test#quot;"]
    end
